--- a/config/default/views.view.search_page.yml
+++ b/config/default/views.view.search_page.yml
@@ -532,15 +532,15 @@ display:
             trim_suffix: ''
             wrap_output: false
             wrap_class: trimmed
-            more_link: false
-            more_class: more-link
-            more_text: More
-            more_aria_label: 'Read more about [node:title]'
             summary_handler: trim
             trim_options:
               text: false
               trim_zero: false
               replace_tokens: false
+            more_link: false
+            more_class: more-link
+            more_text: More
+            more_aria_label: 'Read more about [node:title]'
             token_browser: ''
           group_column: value
           group_columns: {  }
@@ -704,10 +704,10 @@ display:
       style:
         type: blazy
         options:
-          style: column
           grid: '2'
           grid_medium: '2'
           grid_small: '1'
+          style: column
       row:
         type: fields
       query:
@@ -715,7 +715,7 @@ display:
         options:
           bypass_access: false
           skip_access: false
-          preserve_facet_query_args: false
+          preserve_facet_query_args: true
           query_tags: {  }
       relationships: {  }
       header:
