--- a/config/default/block.block.topalert.yml
+++ b/config/default/block.block.topalert.yml
@@ -1,33 +1,34 @@
-uuid: 316a4c5f-41b0-4eda-9455-68ba34dce503
+uuid: f2970304-9d9d-4d65-9550-e29e671403e7
 langcode: en
 status: true
 dependencies:
+  content:
+    - 'block_content:basic:e935e740-dbac-4da5-a727-56019e34660f'
   module:
-    - block_class
+    - block_content
     - context
     - system
   theme:
     - grasacgks
-third_party_settings:
-  block_class:
-    classes: 'float-left float-start'
-_core:
-  default_config_hash: KpapOhIadYRbqfE459LWVv6Eew2DRn2GvMW90E-WjjA
-id: grasacgks_branding
+id: topalert
 theme: grasacgks
 region: navigation_collapsible
-weight: -12
+weight: -16
 provider: null
-plugin: system_branding_block
+plugin: 'block_content:e935e740-dbac-4da5-a727-56019e34660f'
 settings:
-  id: system_branding_block
-  label: 'Site branding'
+  id: 'block_content:e935e740-dbac-4da5-a727-56019e34660f'
+  label: 'Top Alert'
   label_display: '0'
-  provider: system
-  use_site_logo: true
-  use_site_name: true
-  use_site_slogan: false
+  provider: block_content
+  status: true
+  info: ''
+  view_mode: full
 visibility:
+  context:
+    id: context
+    negate: null
+    values: ''
   user_status:
     id: user_status
     negate: false
@@ -43,7 +44,7 @@ visibility:
     id: context_all
     negate: null
     values: ''
-  context:
-    id: context
-    negate: null
-    values: ''
+  request_path:
+    id: request_path
+    negate: false
+    pages: '<front>'
