modifyed home page geo view and search block

--- a/config/default/block.block.topalert.yml
+++ b/config/default/block.block.topalert.yml
@@ -1,6 +1,6 @@
 uuid: f2970304-9d9d-4d65-9550-e29e671403e7
 langcode: en
-status: true
+status: false
 dependencies:
   content:
     - 'block_content:basic:e935e740-dbac-4da5-a727-56019e34660f'
