--- a/config/default/block.block.linkstosearchheritageandlanguageitems.yml
+++ b/config/default/block.block.linkstosearchheritageandlanguageitems.yml
@@ -1,6 +1,6 @@
 uuid: f9c6efb1-e6c4-4915-bbb9-f0b8f70cf6c4
 langcode: en
-status: true
+status: false
 dependencies:
   content:
     - 'block_content:basic:b858d97d-eaa5-4cfe-af6f-b92c21bbca95'
